# AdaptiveWIN-SHAP

./: .gitignore  ABLATION_NOTES.md  BOOTSTRAP_WITH_RANDOM_PARAMS.md  CLAUDE.md  Metainfo.txt  README.md  ROBUSTNESS_ANALYSIS_PLAN.md  ROBUSTNESS_QUICKSTART.md  ROBUSTNESS_TESTING_GUIDE.md  ROBUSTNESS_VISUALIZATION_GUIDE.md  SPEC_DGP_ROBUSTNESS.md  STEP1_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_FRAMEWORK_SUMMARY.md  pyproject.toml
docs/: SPEC_MC_CRITICAL_VALUES.md
examples/: README_SIMULATED_DATASETS.md  aggregate_results.py  animation.py  benchmark.py  benchmark_viz.py  generate_simulated_datasets.py  generate_simulated_datasets_random.py  lstm_empirical.py  lstm_simulation.py  mlp_simulation.py  rnn_simulation.py  run_all_benchmarks.sh  run_all_simulations.sh  run_all_visualizations.sh  run_complete_pipeline.sh  shap_viztech.py  transformers_simulation.py  visualize_lstm_simulation.py  viztech.py
examples/benchmarking/: __init__.py  baselines.py  metrics.py
examples/results/aggregated/: ablation_all_datasets.csv  (+5 more)
examples/robustness/: 01_lpa_sensitivity.py  02_dgp_parameter_robustness.py  06_bootstrap_ci.py  BOOTSTRAP_CI_README.md  README.md  README_DGP_ROBUSTNESS.md  analyze_bootstrap_ci.py  analyze_lpa_sensitivity.py  demo_visualization.py  dgp_parameter_robustness.py  test_new_features.py  test_setup.py  verify_dataset_generation.py  visualize_bootstrap_ci.py  visualize_lpa_sensitivity.py  visualize_robustness.py  visualize_robustness_benchmark.py
src/adaptivewinshap/: __init__.py  animator.py  detector.py  model.py  runner.py  shap.py  utils.py
(+2861 files in other folders)
